--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
   },
   "dependencies": {
     "apollo-server-express": "2.13.0",
+    "db-migrate": "0.11.11",
+    "db-migrate-mysql": "2.1.1",
+    "env2": "2.2.2",
     "esm": "3.2.25",
     "express": "4.17.1",
     "graphql-playground-middleware-express": "1.7.14"
