--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "esm": "3.2.25",
     "express": "4.17.1",
     "graphql-playground-middleware-express": "1.7.14",
+    "graphql-type-json": "0.3.2",
     "mysql": "2.18.1",
     "slugify": "1.4.0"
   }
