--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "env2": "2.2.2",
     "esm": "3.2.25",
     "express": "4.17.1",
+    "graphql-middleware": "4.0.2",
     "graphql-playground-middleware-express": "1.7.14",
     "graphql-type-json": "0.3.2",
     "mysql": "2.18.1",
