--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "graphql-middleware": "4.0.2",
     "graphql-playground-middleware-express": "1.7.14",
     "graphql-type-json": "0.3.2",
-    "mysql": "2.18.1",
+    "mysql2": "2.1.0",
     "slugify": "1.4.0"
   }
 }
