--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "apollo-server-express": "2.13.0",
+    "cookie-parser": "1.4.5",
     "db-migrate": "0.11.11",
     "db-migrate-mysql": "2.1.1",
     "env2": "2.2.2",
