--- a/package.json
+++ b/package.json
@@ -26,11 +26,14 @@
   "dependencies": {
     "apollo-server-express": "2.13.0",
     "cookie-parser": "1.4.5",
+    "date-fns": "2.16.1",
+    "date-fns-tz": "1.0.10",
     "db-migrate": "0.11.11",
     "db-migrate-mysql": "2.1.1",
     "env2": "2.2.2",
     "esm": "3.2.25",
     "express": "4.17.1",
+    "graphql-iso-date": "3.6.1",
     "graphql-middleware": "4.0.2",
     "graphql-playground-middleware-express": "1.7.14",
     "graphql-type-json": "0.3.2",
