--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "apollo-server-express": "2.13.0",
+    "bcrypt": "5.0.0",
     "cookie-parser": "1.4.5",
     "date-fns": "2.16.1",
     "date-fns-tz": "1.0.10",
