--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "experiences-data-server",
   "version": "0.0.1",
   "private": true,
+  "engines": {
+    "node": ">=8.16.2",
+    "npm": ">=6.4.1"
+  },
   "description": "A data server for world of expriences.",
   "main": "./index.js",
   "module": "./index.js",
