--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "graphql-type-json": "0.3.2",
     "jsonwebtoken": "8.5.1",
     "mysql2": "2.1.0",
+    "nodemailer": "6.4.11",
+    "nodemailer-ses-transport": "1.5.1",
     "slugify": "1.4.0"
   }
 }
