--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "apollo-server-express": "2.13.0",
     "bcrypt": "5.0.0",
     "cookie-parser": "1.4.5",
+    "crypto-js": "4.0.0",
     "date-fns": "2.16.1",
     "date-fns-tz": "1.0.10",
     "db-migrate": "0.11.11",
