--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "build": "babel src -d dist",
     "start": "nodemon -r esm ./index.js",
-    "dev": "NODE_ENV=development nodemon -r esm ./index.js",
+    "dev": "cross-env NODE_ENV=development nodemon -r esm ./index.js",
     "test": "npm run build && mocha --require @babel/register"
   },
   "author": "Krishna Maurya <mauryakrishna1@gmail.com>",
@@ -24,6 +24,7 @@
     "@babel/core": "^7.4.0",
     "@babel/preset-env": "^7.4.2",
     "@babel/register": "^7.4.0",
+    "cross-env": "^7.0.2",
     "mocha": "^5.2.0",
     "nodemon": "^1.17.5"
   },
