--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "mysql2": "2.1.0",
     "nodemailer": "6.4.11",
     "nodemailer-ses-transport": "1.5.1",
+    "slate": "^0.62.0",
     "slugify": "1.4.0"
   }
 }
